# wie

./: .dev.vars.example  .gitignore  AGENTS.md  BRIDGE_REPORT.md  CONTRIBUTING.md  Cargo.toml  README.md  REPORT.md  STATE.md  STEP2_REPORT.md  package-lock.json  package.json  wrangler.toml
.github/workflows/: coverage.yml  engine-contract.yml  publish-artifact.yml  rust-audit.yaml  web.yml
data/: binary_patches.toml
docs/: ARTIFACT-PUBLISH-PLAN.md  CLOUDFLARE_SETUP.md  COMPLIANCE.md  PR_DESCRIPTION.md  ezi_dispatch_reference.md  lgt.md  lgt_abi.md  lgt_native_classes.md  web.md
docs/contracts/: featurephone-engine-contract.json  featurephone-engine-contract.md
docs/project-kb/: 00_INDEX.md  01_brief.md  02_status.md  10_deep-assets.md  90_project-setup.md
docs/reference/: WIPIHeader.h  ezi_dispatch_reference.md  ezi_native_surface.txt  lgt_0x64_ordinal_table.md  mobile_vm_render_pipeline_notes.md
docs/worklog/: 2026-07-22--featurephone-engine-contract-selftest.json
functions/: _middleware.js
functions/_lib/: crypto.js  email.js  files.js  http.js  ratelimit.js  session.js  (+1 more)
migrations/: 0001_init.sql  0002_email_and_devices.sql  0003_user_files_and_reports.sql  0004_email_identity.sql  0005_saves_rom_hash.sql  0006_save_prev_version.sql  0007_report_takedown_fields.sql  0008_inquiry_file_refs.sql
scripts/: audit-no-leak.sh  build-wasm.sh  check-engine-contract.mjs  contract-roundtrip.mjs  lgt_render_probe.sh  smoke_gate.sh  smoke_gate_baseline.tsv  verify-browser.mjs
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
wie_cli/: Cargo.toml
wie_web/: Cargo.toml
wie_web/src/: audio.rs  database.rs  filesystem.rs  lib.rs  platform.rs  screen.rs
(+101 files in other folders)
